--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 	<ol>
 	<li><p><a href="Praktikum_1_1700016067.html">Praktikum 1 - Canvas HTML</a></p></li>
-	<li><p><a href="Praktikum_2_1700016067">Praktikum 2 - </a></p></li>
-	<li><p><a href="Praktikum_3_1700016067">Praktikum 3 - </a></p></li>
-	<li><p><a href="Praktikum_4_1700016067">Praktikum 4 - </a></p></li>
-	<li><p><a href="Praktikum_5_1700016067">Praktikum 5 - </a></p></li>
-	<li><p><a href="Praktikum_6_1700016067">Praktikum 6 - </a></p></li>
-	<li><p><a href="Praktikum_7_1700016067">Praktikum 7 - </a></p></li>
-	<li><p><a href="Praktikum_8_1700016067">Praktikum 8 - </a></p></li>
-	<li><p><a href="Praktikum_9_1700016067">Praktikum 9 - </a></p></li>
-	<li><p><a href="Praktikum_10_1700016067">Praktikum 10 - </a></p></li>
+	<li><p><a href="Praktikum_2_1700016067.html">Praktikum 2 - Interaktifitas</a></p></li>
+	<li><p><a href="Praktikum_3_1700016067.html">Praktikum 3 - </a></p></li>
+	<li><p><a href="Praktikum_4_1700016067.html">Praktikum 4 - </a></p></li>
+	<li><p><a href="Praktikum_5_1700016067.html">Praktikum 5 - </a></p></li>
+	<li><p><a href="Praktikum_6_1700016067.html">Praktikum 6 - </a></p></li>
+	<li><p><a href="Praktikum_7_1700016067.html">Praktikum 7 - </a></p></li>
+	<li><p><a href="Praktikum_8_1700016067.html">Praktikum 8 - </a></p></li>
+	<li><p><a href="Praktikum_9_1700016067.html">Praktikum 9 - </a></p></li>
+	<li><p><a href="Praktikum_10_1700016067.html">Praktikum 10 - </a></p></li>
 </ol>
 </body>
 </html>
