--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Home</title>
-</head>
-<body>
-	<h1>Hasil Praktikum Multimedia Online</h1>
-	<p>Lutfiah Atsari Sujud</p>
-	<p>1700016067</p>
+<html lang="en">
 
-	<ol>
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Scrolling Nav - Start Bootstrap Template</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/scrolling-nav.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Multimedia Online</a>
+    </div>
+  </nav>
+
+  <header class="bg-primary text-black" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
+    <div class="container text-center">
+      <h1>Hasil Praktikum Multimedia Online</h1>
+      <p class="lead">Nama : Lutfiah Atsari Sujud</p>
+	  <p class="lead">NIM : 1700016067</p>
+    </div>
+  </header>
+  <div class ="tampil">
+    <ol>
 	<li><p><a href="Praktikum_1_1700016067.html">Praktikum 1 - Canvas HTML</a></p></li>
 	<li><p><a href="Praktikum_2_1700016067.html">Praktikum 2 - Interaktifitas</a></p></li>
 	<li><p><a href="Praktikum_3_1700016067.html">Praktikum 3 - Vektor Pattern Art</a></p></li>
@@ -19,6 +46,26 @@
 	<li><p><a href="Praktikum_8_1700016067.html">Praktikum 8 - </a></p></li>
 	<li><p><a href="Praktikum_9_1700016067.html">Praktikum 9 - </a></p></li>
 	<li><p><a href="Praktikum_10_1700016067.html">Praktikum 10 - </a></p></li>
-</ol>
+	</ol>
+</div>
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom JavaScript for this theme -->
+  <script src="js/scrolling-nav.js"></script>
+
 </body>
+
 </html>
