--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+	/*!
+ * Start Bootstrap - Scrolling Nav (https://startbootstrap.com/template-overviews/scrolling-nav)
+ * Copyright 2013-2019 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
+ */
+header {
+  padding: 145px 0 100px;
+}
 
+section {
+  padding: 15px 0;
+}
+tampil{
+	background-color:grey;
+}
+	</style>
 <head>
 
   <meta charset="utf-8">
