--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<li><p><a href="Praktikum_2_1700016067.html">Praktikum 2 - Interaktifitas</a></p></li>
 	<li><p><a href="Praktikum_3_1700016067.html">Praktikum 3 - Vector Pattern</a></p></li>
 	<li><p><a href="Praktikum_4_1700016067.html">Praktikum 4 - Puzzle</a></p></li>
-	<li><p><a href="Praktikum_5_1700016067.html">Praktikum 5 - </a></p></li>
+	<li><p><a href="Praktikum_5_1700016067.html">Praktikum 5 - Animation - Tween Motion</a></p></li>
 	<li><p><a href="Praktikum_6_1700016067.html">Praktikum 6 - </a></p></li>
 	<li><p><a href="Praktikum_7_1700016067.html">Praktikum 7 - </a></p></li>
 	<li><p><a href="Praktikum_8_1700016067.html">Praktikum 8 - </a></p></li>
