--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <div class="menu-item light-orange responsive-2">
                                     <a href="#team-modal" data-toggle="modal">
                                         <i class="fa fa-users"></i>
-                                        <p><a href="Praktikum_6_1700016067.html">Praktikum_6</p></a>
+                                        <p><a href="Praktikum_6_1700016067.html">Praktikum_6 Audio Visualizer</p></a>
                                     </a>
                                 </div>
                             </div>
