--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
                         <div class="menu-item light-red">
                             <a href="#contact-modal" data-toggle="modal">
                                 <i class="fa fa-envelope-o"></i>
-                                <p><a href="Praktikum_7_1700016067.html">Praktikum_7</p></a>
+                                <p><a href="Praktikum_7_1700016067.html">Praktikum_7 Audio Recording</p></a>
                             </a>
                         </div>
                         
                         <div class="menu-item color">
                             <a href="#testimonial-modal" data-toggle="modal">
                                 <i class="fa fa-comment-o"></i>
-                                <p><a href="Praktikum_8_1700016067.html">Praktikum_8</p></a>
+                                <p><a href="Praktikum_8_1700016067.html">Praktikum_8 Image Manipulating</p></a>
                             </a>
                         </div>
                         
