--- a/index.html
+++ b/index.html
@@ -170,14 +170,7 @@
                         <div class="menu-item blue">
                             <a href="#news-modal" data-toggle="modal">
                                 <i class="fa fa-mortar-board"></i>
-                                <p><a href="Praktikum_9_1700016067.html">Praktikum_9</p></a>
-                            </a>
-                        </div>
-                        
-                         <div class="menu-item blue">
-                            <a href="#news-modal" data-toggle="modal">
-                                <i class="fa fa-mortar-board"></i>
-                                <p><a href="Praktikum_10_1700016067.html">Praktikum_10</p></a>
+                                <p><a href="Tugas_Akhir_1700016067.html">Tugas Akhirr</p></a>
                             </a>
                         </div>
                     </div>
