--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     
                     <div class="col-md-3">
 			 <div class="menu-item light-red">
-                            <a href="#contact-modal" data-toggle="modal">
+                               <a href="#testimonial-modal" data-toggle="modal">
                                 <i class="fa fa-envelope-o"></i>
                                 <p><a href="Praktikum_6_1700016067.html">Praktikum_6 Audio Visualizer</p></a>
                             </a>
@@ -166,7 +166,7 @@
                         </div>
                         
                         <div class="menu-item color">
-                            <a href="#testimonial-modal" data-toggle="modal">
+			    <a href="#portfolio-modal" data-toggle="modal">
                                 <i class="fa fa-comment-o"></i>
                                 <p><a href="Praktikum_8_1700016067.html">Praktikum_8 Image Manipulating</p></a>
                             </a>
