--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="menu-item color responsive">
+                                <div class="menu-item color green">
                                     <a href="#service-modal" data-toggle="modal">
                                         <i class="fa fa-area-chart"></i>
                                         <p><a href="Praktikum_5_1700016067.html">Praktikum_5 Animation - Tween Motion</p></a>
@@ -142,7 +142,7 @@
                                 <div class="menu-item color responsive">
                                     <a href="#service-modal" data-toggle="modal">
                                         <i class="fa fa-area-chart"></i>
-                                        <p><a href="  UTS_MULON_1700016067.html">UTS Multimedia Online - Game</p></a>
+                                        <p><a href="UTS_MULON_1700016067.html">UTS Multimedia Online - Game</p></a>
                                     </a>
                                 </div>
                             </div>   
