--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         
                         <div class="menu-item green">
                             <a href="#portfolio-modal" data-toggle="modal">
-                                <i class="fa fa-file-photo-o"></i>
+                                <i class="fa fa-slack"></i>
                                 <p><a href="Praktikum_2_1700016067.html">Praktikum_2 Interaktifitas<a></p>
                             </a>
                         </div>
@@ -132,7 +132,7 @@
                             <div class="col-md-6">
                                 <div class="menu-item color responsive">
                                     <a href="#service-modal" data-toggle="modal">
-                                        <i class="fa fa-area-chart"></i>
+                                        <i class="fa  fa-lightbulb-o"></i>
                                         <p><a href="Praktikum_5_1700016067.html">Praktikum_5 Animation - Tween Motion</p></a>
                                     </a>
                                 </div>
@@ -141,7 +141,7 @@
 			     <div class="col-md-6">
                                 <div class="menu-item color responsive">
                                     <a href="#service-modal" data-toggle="modal">
-                                        <i class="fa fa-area-chart"></i>
+                                        <i class="fa fa-trophy"></i>
                                         <p><a href="UTS_MULON_1700016067.html">UTS Multimedia Online - Game</p></a>
                                     </a>
                                 </div>
