--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <div class="menu-item color responsive">
                                     <a href="#service-modal" data-toggle="modal">
                                         <i class="fa fa-trophy"></i>
-                                        <p><a href="UTS_MULON_1700016067.html">UTS Multimedia Online - Game</p></a>
+                                        <p><a href="UTS_MULON_1700016067.html">UTS Multimedia Online - Game Sederhana</p></a>
                                     </a>
                                 </div>
                             </div>   
